cabal-version:      2.4
name:               advent-of-code-y2022
version:            0.1.0.0

author:             Junjie Wu
maintainer:         clatisus@gmail.com

executable advent-of-code-y2022
  main-is:          Main.hs
  other-modules:    Util, Day1, Day2
  build-depends:    base, split
  hs-source-dirs:   app, src
  default-language: Haskell2010
