cabal-version:      2.4
name:               advent-of-code-y2022
version:            0.1.0.0

author:             Junjie Wu
maintainer:         clatisus@gmail.com

executable advent-of-code-y2022
  main-is:          Main.hs
  other-modules:
    Day1,
    Day2,
    Day3,
    Day4,
    Day5,
    Day6,
    Day7,
    Day8,
    Day9,
    Day10,
    Day11,
    Day12,
    Day13,
    Day14
  build-depends:    base, split, containers, lens, parsec, vector, list-extras
  hs-source-dirs:   app, src
  default-language: Haskell2010
